<resources>
    <string name="app_name">submission03</string>
    <string name="logo">Logo</string>
    <string name="find_your_favorite_movie_here">Find Your Favorite Movie Here</string>
    <string name="search_movie">Search Movie...</string>
    <string name="loop">Search loop Image</string>
    <string name="movie">Movie</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="detail_poster">Detail Poster</string>
    <string name="rating">⭐ 8.7</string>
    <string name="backdrop">Movie Backdrop Image</string>
    <string name="tvshows">TV Shows</string>
    <string name="on_the_air">On The Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="popular_peoples">Popular Peoples</string>
    <string name="popular_people">Popular People</string>
    <string name="login">LOGIN</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite">Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="tdp_batch_3_final_task">TDP Batch 3 - Final Task</string>
    <string name="loading_data">Loading Data</string>
    <string name="add_to_watch_list">Add to Watch List</string>
    <string name="remove_from_watch_list">Remove from Watch List</string>
    <string name="your_watch_list">Your Watch List</string>
    <string name="show_all">Show All</string>
    <string name="comment_section">Comment Section</string>
    <string name="write_review">Write Review</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="please_fill_your_name">Please fill your name...</string>
    <string name="comment_hint">Comment...</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="known_for">Known For</string>
    <string name="biography">Biography</string>
    <string name="no_comments_available">No Comments Available</string>
    <string name="watchlist_is_empty">Watchlist is Empty</string>
    <string name="movie_not_found">Movie Not Found</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="AddtoWatchlist">Add to Watchlist</string>
</resources>