<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailActivity">

        <com.faltenreich.skeletonlayout.SkeletonLayout
            android:id="@+id/skeletonLayoutBackdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detailBackdrop"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/avengers_bd" />

        </com.faltenreich.skeletonlayout.SkeletonLayout>

        <com.faltenreich.skeletonlayout.SkeletonLayout
            android:id="@+id/skeletonLayoutPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:layout_constraintDimensionRatio="2:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Views to mask -->
            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:contentDescription="@string/detail_poster"
                android:src="@drawable/avengers_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.faltenreich.skeletonlayout.SkeletonLayout>


        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skeletonLayoutPoster"
            tools:text="Avengers: Endgame" />

        <TextView
            android:id="@+id/detailReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTitle"
            tools:text="1995-10-20" />

        <TextView
            android:id="@+id/detailRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailReleaseDate"
            tools:text="⭐ 8.7" />

        <TextView
            android:id="@+id/tvAddWatchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/customborder"
            android:text="@string/add_to_watch_list"
            android:textAlignment="center"
            android:padding="8dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailRating"/>

        <TextView
            android:id="@+id/tvRemoveWatchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/customborder"
            android:text="@string/remove_from_watch_list"
            android:textAlignment="center"
            android:padding="8dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailRating"/>

        <TextView
            android:id="@+id/detailOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailRating"
            tools:ignore="VisualLintLongText"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque, orci et suscipit mollis, ligula tortor eleifend enim,vel laoreet lorem turpis egestas dui. Maecenas mauris justo, hendreritin dignissim nec, convallis eget lectus. Duis viverra sapien et leo rhoncus, vel viverra ligula egestas. Duis quis leo lacus. Aliquam dignissim arcu velit, non tempus erat vehicula id." />

        <ImageView
            android:id="@+id/ivCommentBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/detailOverview"
            android:background="@color/grey"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_section"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/ivCommentBorder"/>

        <TextView
            android:id="@+id/tvWriteComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_review"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/ivCommentBorder"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:listitem="@layout/comment_item"
            app:layout_constraintTop_toBottomOf="@id/tvWriteComment"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
